No need to accept macOS SDK 10.13 surely
We require at least 10.14 at run-time anyway.

Change-Id: Iaffdb403696733583ac66e31139c3b427aae0b69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142233
Tested-by: Tor Lillqvist <tml@collabora.com>
Reviewed-by: Tor Lillqvist <tml@collabora.com>

--- a/configure.ac
+++ b/configure.ac
@@ -3428,7 +3428,7 @@ if test $_os = Darwin; then
     # The SDK in the currently selected Xcode should be found.
 
     AC_MSG_CHECKING([what macOS SDK to use])
-    for macosx_sdk in 13.0 12.3 12.1 12.0 11.3 11.1 11.0 10.15 10.14 10.13; do
+    for macosx_sdk in 13.0 12.3 12.1 12.0 11.3 11.1 11.0 10.15 10.14; do
         MACOSX_SDK_PATH=`xcrun --sdk macosx${macosx_sdk} --show-sdk-path 2> /dev/null`
         if test -d "$MACOSX_SDK_PATH"; then
             break
@@ -3446,9 +3446,6 @@ if test $_os = Darwin; then
     AC_MSG_RESULT([macOS SDK $macosx_sdk at $MACOSX_SDK_PATH])
     MACOSX_SDK_BUILD_VERSION=$(xcodebuild -version -sdk "$MACOSX_SDK_PATH" ProductBuildVersion) 
     case $macosx_sdk in
-    10.13)
-        MACOSX_SDK_VERSION=101300
-        ;;
     10.14)
         MACOSX_SDK_VERSION=101400
         ;;
