Clarify the cairo warning in ./configure
To know what to expect.

Change-Id: Ia660a1ebdbb76c04aa96934cabc16e1cbfc4cfd1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142478
Tested-by: Jenkins
Reviewed-by: Jan Holesovsky <kendy@collabora.com>

--- a/configure.ac
+++ b/configure.ac
@@ -11774,7 +11774,7 @@ GTK3_LIBS=""
 ENABLE_GTKTILEDVIEWER=""
 if test "$test_gtk3" = yes -a "x$enable_gtk3" = "xyes" -o "x$enable_gtk3_kde5" = "xyes"; then
     if test "$with_system_cairo" = no; then
-        add_warning 'Non-system cairo combined with gtk3 is assumed to cause trouble; proceed at your own risk.'
+        add_warning 'Non-system cairo combined with gtk3 is known to cause trouble (eg. broken image in the splashscreen). Use --with-system-cairo unless you know what you are doing.'
     fi
     : ${with_system_cairo:=yes}
     PKG_CHECK_MODULES(GTK3, gtk+-3.0 >= 3.20 gtk+-unix-print-3.0 gmodule-no-export-2.0 glib-2.0 >= 2.38 atk >= 2.28.1 cairo)
