actually don't compile tools/source/misc/fix16.cxx with system-libfixmath
31336de9b56e2dbfa9444914e1e3402771c85f66 missed the config_host.mk.in
part

Change-Id: Ic18964f02fc80b0f9b3de6518e069038f03932af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142637
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -645,6 +645,7 @@ export SYSTEM_LIBATOMIC_OPS=@SYSTEM_LIBATOMIC_OPS@
 export SYSTEM_LIBEOT=@SYSTEM_LIBEOT@
 export SYSTEM_LIBEXTTEXTCAT=@SYSTEM_LIBEXTTEXTCAT@
 export SYSTEM_LIBEXTTEXTCAT_DATA=@SYSTEM_LIBEXTTEXTCAT_DATA@
+export SYSTEM_LIBFIXMATH=@SYSTEM_LIBFIXMATH@
 export SYSTEM_LIBLANGTAG=@SYSTEM_LIBLANGTAG@
 export SYSTEM_LIBNUMBERTEXT=@SYSTEM_LIBNUMBERTEXT@
 export SYSTEM_LIBNUMBERTEXT_DATA=@SYSTEM_LIBNUMBERTEXT_DATA@
