Make it possible to run either Writer or Calc in the same Emscripten thing
If no --with-main-module option is used, don't strip either.

To switch, you need to edit the instdir/program/soffice.js . (Or
static/emscripten/soffice_args.js and re-make.)

Change-Id: I572a777134e7b29fc4896e7b094ceca521874ae1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143396
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>

--- a/configure.ac
+++ b/configure.ac
@@ -3937,7 +3937,7 @@ if test "$cross_compiling" = "yes"; then
     if test "$_os" = "Emscripten"; then
         if test "$with_main_module" = "calc"; then
             ENABLE_WASM_STRIP_WRITER=TRUE
-        else
+        elif test "$with_main_module" = "writer"; then
             ENABLE_WASM_STRIP_CALC=TRUE
         fi
     fi
