accept Apple's patch utility - pickier than GNU patch, but should be OK
macOS Ventura replaced the patch utility by Apple's version:
patch 2.0-12u11-Apple (as of macOS 13.0.1)

It is picker/less robust when it comes to locating matches, and absolutely
refuses to apply when the hunks are out of order. Only one patch needed
rework in the current codebase (master an 7-4 branch), and being more correct
about the locations in the files to be patched is not a bad thing either, so
accept Apple's version of patch (with a warning for now)

Change-Id: I707d00958b814307b13caf9923f1de7f3919442c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143461
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -11542,7 +11542,12 @@ if test "$_os" = "SunOS" -o "$_os" = "Darwin"; then
     if $GNUPATCH --version | grep "Free Software Foundation" >/dev/null 2>/dev/null; then
         AC_MSG_RESULT([yes])
     else
-        AC_MSG_ERROR([no, GNU patch needed. install or specify with --with-gnu-patch=/path/to/it])
+        if $GNUPATCH --version | grep "2\.0-.*-Apple" >/dev/null 2>/dev/null; then
+            AC_MSG_RESULT([no, but accepted (Apple patch)])
+            add_warning "patch utility is not GNU patch. Apple's patch should work OK, but it might experience issues where GNU patch doesn't."
+        else
+            AC_MSG_ERROR([no, GNU patch needed. install or specify with --with-gnu-patch=/path/to/it])
+        fi
     fi
 else
     GNUPATCH=$PATCH
