Make it possible build for WASM with --disable-gui, without Qt5
The various configury options here are a bit confusing, but this works
at least for me.

Change-Id: Ic9b04d40414d7d630d5a854295ce23b6e72a724a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143486
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>

--- a/configure.ac
+++ b/configure.ac
@@ -1156,7 +1156,7 @@ emscripten)
     # API currently just exists in headers, not code
     usable_dlapi=no
     using_freetype_fontconfig=yes
-    using_x11=no
+    using_x11=yes
     test_openldap=no
     test_qt5=yes
     test_split_debug=yes
@@ -5429,7 +5429,7 @@ if test "$with_x" = "no"; then
     USING_X11=
 fi
 
-if test -z "$USING_X11" -a "$DISABLE_DYNLOADING" = TRUE -a "$enable_gen" = "yes"; then
+if test -z "$USING_X11" -a "$enable_qt5" = "yes" -a "$enable_gen" = "yes"; then
     AC_MSG_ERROR([Can't select gen VCL plugin, if --without-x is used!])
 fi
 
