create compile_commands.json in builddir
assuming that nothing breaks for existing users of the
compile_commands.json file, since they assume BUILDDIR=SRCDIR, so
nothing will change in those cases.

For building in a different directory than the source, the
compile_commands.json file is the only thing that regularly clobbers my
otherwise pristine SRCROOT

Change-Id: I344afa0bc7bb3eaa1eb888cd3558d3602090af5f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143571
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>

--- a/.vscode/vs-code-template.code-workspace.in
+++ b/.vscode/vs-code-template.code-workspace.in
@@ -35,8 +35,7 @@
 		"files.associations": {
 			"*.patch.[0-9]": "diff"
 		},
-		// FIXME: arguably the generator should place it in the builddir, not srcdir
-		"C_Cpp.default.compileCommands": "${workspaceFolder:srcdir}/compile_commands.json",
+		"C_Cpp.default.compileCommands": "@BUILDDIR@/compile_commands.json",
 		// only used if the file doesn't match anything in the compile_commands.json - aka externals
 		// libxml includes just added as example/for reference
 		"C_Cpp.default.includePath": [
